adding some controls to much with variables

--- a/index.html
+++ b/index.html
@@ -7,6 +7,29 @@
 		<link rel="stylesheet" href="site.css">
 	</head>
 	<body>
+asdasd
+		<div class="controls">
+			<label>
+				Gravity
+				<input type="number" id="gravity" />
+			</label>
+			<label>
+				Wind
+				<input type="number" id="wind" />
+			</label>
+			<label>
+				Draw interval
+				<input type="number" id="draw-delay" />
+			</label>
+			<label>
+				Explosion Rays
+				<input type="number" id="max-rays" />
+			</label>
+			<label>
+				Explosion Layers
+				<input type="number" id="max-layers" />
+			</label>
+		</div>
 
 		<!-- Scripts -->
 		<script type="text/javascript" src="jquery.js"></script>
