particle size input

--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@ asdasd
 				Explosion Layers
 				<input type="number" id="max-layers" />
 			</label>
+			<label>
+				Particle Size
+				<input type="number" id="particle-size" />
+			</label>
 		</div>
 
 		<!-- Scripts -->
